--- a/express/package.json
+++ b/express/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "forever": "^0.15.3",
     "nodemon": "^1.18.9"
+  },
+  "dependencies": {
+    "celebrate": "^9.0.1",
+    "mongoose": "^5.4.4"
   }
 }
