--- a/express/package.json
+++ b/express/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "forever -c \"nodemon --exitcrash -L\" app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,8 @@
   },
   "dependencies": {
     "celebrate": "^9.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "mongoose": "^5.4.4"
   }
 }
