--- a/express/package.json
+++ b/express/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "express",
+  "name": "express-bali",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "forever -c \"nodemon --exitcrash -L\" app.js"
+    "server": "forever -c \"nodemon --exitcrash -L\" index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "celebrate": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "mongoose": "^5.4.4"
   }
 }
