--- a/express/package.json
+++ b/express/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "googleapis": "^27.0.0",
     "mongoose": "^5.4.4"
   }
 }
