--- a/express/package.json
+++ b/express/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "googleapis": "^27.0.0",
-    "mongoose": "^5.4.4"
+    "googleapis": "^36.0.0",
+    "mongoose": "^5.4.4",
+    "morgan": "^1.9.1"
   }
 }
