--- a/express/package.json
+++ b/express/package.json
@@ -14,12 +14,14 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "celebrate": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "googleapis": "^36.0.0",
     "mongoose": "^5.4.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "sendgrid": "^5.2.3"
   }
 }
