--- a/react/balicomau/package.json
+++ b/react/balicomau/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
-    "normalize.css": "^8.0.1",
     "axios": "^0.18.0",
     "googleapis": "^27.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-stripe-checkout": "^2.6.3",
     "react-swipeable-views": "^0.13.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
