--- a/react/balicomau/package.json
+++ b/react/balicomau/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "aws-sdk": "^2.392.0",
     "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "googleapis": "^27.0.0",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
