--- a/express/package.json
+++ b/express/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "body-parser": "^1.18.3",
     "celebrate": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -22,6 +23,7 @@
     "googleapis": "^36.0.0",
     "mongoose": "^5.4.4",
     "morgan": "^1.9.1",
-    "sendgrid": "^5.2.3"
+    "sendgrid": "^5.2.3",
+    "stripe": "^6.21.0"
   }
 }
