--- a/react/balicomau/package.json
+++ b/react/balicomau/package.json
@@ -21,6 +21,7 @@
     "react-swipeable-views": "^0.13.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-form-material-ui": "^5.0.0-beta.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
