--- a/express/package.json
+++ b/express/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "googleapis": "^36.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.4",
     "morgan": "^1.9.1",
     "sendgrid": "^5.2.3",
