--- a/react/balicomau/package.json
+++ b/react/balicomau/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.0.1",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "aws-sdk": "^2.392.0",
     "axios": "^0.18.0",
+    "date-fns": "^2.0.0-alpha.25",
     "dotenv": "^6.2.0",
     "googleapis": "^27.0.0",
+    "material-ui-pickers": "^2.1.2",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "normalize.css": "^8.0.1",
