--- a/react/balicomau/package.json
+++ b/react/balicomau/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^6.2.0",
     "googleapis": "^27.0.0",
     "material-ui-pickers": "^2.1.2",
+    "moment": "^2.24.0",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "normalize.css": "^8.0.1",
