--- a/express/package.json
+++ b/express/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "server": "forever -c \"nodemon --exitcrash -L\" index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "forever": "^0.15.3",
-    "nodemon": "^1.18.9"
+    "jest": "^24.0.0",
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.2"
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
