--- a/express/package.json
+++ b/express/package.json
@@ -23,9 +23,14 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "googleapis": "^36.0.0",
+    "jsonwebtoken": "^8.4.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.4",
+    "mongoose-bcrypt": "^1.6.0",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sendgrid": "^5.2.3",
     "stripe": "^6.21.0"
   }
