--- a/express/package.json
+++ b/express/package.json
@@ -5,14 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --coverage",
-    "server": "forever -c \"nodemon --exitcrash -L\" index.js"
+    "server": "forever -c \"nodemon --exitcrash -L\" index.js",
+    "start": "forever -c \"nodemon --exitcrash -L\" index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "forever": "^0.15.3",
     "jest": "^24.0.0",
-    "nodemon": "^1.18.9",
     "supertest": "^3.4.2"
   },
   "dependencies": {
@@ -22,12 +21,14 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "forever": "^0.15.3",
     "googleapis": "^36.0.0",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.4",
     "mongoose-bcrypt": "^1.6.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
