--- a/react/balicomau/.env.development
+++ b/react/balicomau/.env.development
@@ -1,2 +1,2 @@
 REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_42Musc9jiRqFDMB3ZGvJm8nd
-REACT_APP_API_URI=http://localhost:3000
+REACT_APP_API_URI=http://localhost:3000/
